docker_switch: docker-current <-> docker-latest
This pair of sub-subtests simply switches back and forth between
docker-current and docker-latest (in RHEL and CentOS).  Then after
restarting the docker daemon, it confirms the version change. This test
is intended for use along with a customized sequence of other tests.
There is no provison made for recovering the system if the one of these
tests fail.  Therefor, both tests are disabled/excluded by default.

Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/config_defaults/control.ini
+++ b/config_defaults/control.ini
@@ -15,7 +15,7 @@ include =
 # in addition to any specified by --args x=<csv> sub-option.
 # e.g. "docker_cli/run,docker_cli/attach/no_stdin"
 exclude = example,subexample,pretest_example,intratest_example,
-          posttest_example
+          posttest_example, redhat/docker_switch
 
 # Subtests/Sub-subtest to consider for inclusion before
 # consulting include/exclude (above).
