--- a/config_defaults/control.ini
+++ b/config_defaults/control.ini
@@ -14,7 +14,7 @@ include =
 # Subtests/sub-subtest names to remove from include (above)
 # in addition to any specified by --args x=<csv> sub-option.
 # e.g. "docker_cli/run,docker_cli/attach/no_stdin"
-exclude = example,subexample,pretest_example,intratest_example,
+exclude = example,subexample,bashexample,pretest_example,intratest_example,
           posttest_example
 
 # Subtests/Sub-subtest to consider for inclusion before
