FUDGING FOR CI: DO NOT MERGE

--- a/config_defaults/subtests/docker_cli/systemd_in_container.ini
+++ b/config_defaults/subtests/docker_cli/systemd_in_container.ini
@@ -2,4 +2,4 @@
 
 #: When non-empty, a CSV list of additional images to run this test against.
 #: *N/B:* The default test image is always exercized.
-fqins_to_test =
+fqins_to_test = fedora:latest,centos:latest
