Fix regex no-match due to escape codes
Several tests examine docker output, which can be tainted by it's
injection of terminal escape (ANSI) color codes.  For example,
the ``build/https_file`` subtest checks for the regex '^Shazam!$'
coming from one of the layer builds.  However actual output
will be ``\e[91m[0mSchazam!`` and therefor, fail to match.

Since docker is suppose to disable such color embellishment when
``$TERM="dumb"``, tests should be able to exercise this behavior
and/or disable it when it gets in the way of processing.

Fix this by defining a new ``docker_dumb`` configuration value,
set False by default to preserve previous behavior.  However, when set
true, then any DockerCmd() instance will take care to set ``$TERM="dumb"``
while executing the docker command.  Otherwise, the current value
of $TERM will be used.

Add unittests to confirm both the positive and negative setting and
affect.

Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/config_defaults/defaults.ini
+++ b/config_defaults/defaults.ini
@@ -25,6 +25,10 @@ docker_timeout = 300.0
 #: Default timeout (seconds) for `dockercmd.wait_for_ready()`
 wait_ready = 60
 
+#: When true execute all docker commands with TERM=dumb, otherwise
+#: use whatever value was exported to the autotest process (including undefined)
+docker_dumb = no
+
 ##### docker content options
 
 #: CSV list of options recommended for customization.  Tests will
