Use TERM=dumb for all docker build tests
Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/config_defaults/subtests/docker_cli/build.ini
+++ b/config_defaults/subtests/docker_cli/build.ini
@@ -31,6 +31,7 @@ minus_eff =
 #: Defaults to disabled, Docker-1.13 ignores $TERM for build
 #: sub-command (BZ1403326)
 enable_nonprintables_check = no
+docker_dumb = yes
 
 #: Comma-separated post-process checks to call, in order, with optional
 #: string parameter enclosed in ``('``, ``')``.  Check commands are:{n}
