DO NOT MERGE: Duct-tape to enable podman testing
Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/config_defaults/defaults.ini
+++ b/config_defaults/defaults.ini
@@ -13,8 +13,8 @@ autotest_version = @!NOVERSIONCHECK!@
 
 ##### docker command options
 
-#: Docker default options (before subcommand)
-docker_path = /usr/bin/docker
+#: Podman binary location, assumes autotest install location
+docker_path = /var/lib/autotest/client/tests/docker/podman_output_filter
 
 #: Global docker client command options to use (CSV)
 docker_options =
