--- a/config_defaults/subtests/docker_cli/run_user.ini
+++ b/config_defaults/subtests/docker_cli/run_user.ini
@@ -1,5 +1,5 @@
 [docker_cli/run_user]
 docker_timeout = 60
-subsubtests = default,named_user,bad_user,bad_number,too_high_number
+subsubtests = default,named_user,bad_user
 #: modifies the container command
 exec_cmd = 'echo UIDCHECK: $UID:$GID; echo WHOAMICHECK: `whoami`'
